# latte-lens

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  install.ps1  install.sh
.github/workflows/: ci-pr.yml  ci.yml  release.yml
benches/: tree_scan.rs
docs/: README.md  preview-providers.md  search-performance.md
docs/design/: code-agent-observability.md  code-navigation.md  common-file-previews.md  external-file-open.md  keyboard-shortcuts.md  preview-providers.md
docs/engineering/: search-performance.md
docs/integrations/: claude-code-hooks.md  hook-setup.md  opencode-plugins.md  traex-hooks.md
docs/testing/: code-agent-observability-test-gates.md  test-gates.md
integrations/opencode/: latte-lens.js
integrations/traex/: hooks.json
scripts/: agent_e2e_tui.py  build-release.ps1  build-release.sh  coverage-e2e.sh  e2e_tui.py  generate-release-notes.sh  test_e2e_framework.py  test_generate_release_notes.py  test_install.py  test_install_windows.py  test_verify_release_package.py  verify-release-package.py
scripts/e2e/: __init__.py  fixtures.py  runner.py  scenarios.py  terminal.py
src/: app.rs  clipboard.rs  content_safety.rs  diff.rs  folding.rs  git.rs  lib.rs  lsp.rs  lsp_process.rs  lsp_process_unix.rs  lsp_process_windows.rs  main.rs  navigation.rs  preview.rs  repo_graph.rs  runtime.rs  search.rs  system_preview.rs  text_layout.rs  tree.rs  ui.rs
src/agent/: adapter.rs  bootstrap.rs  bounded.rs  claude.rs  codex.rs  contract.rs  crypto.rs  dispatcher.rs  envelope.rs  error.rs  explain.rs  hook.rs  hook_json.rs  hook_setup.rs  identity.rs  live.rs  metadata.rs  mod.rs  model.rs  opencode.rs  provider.rs  runtime.rs  state.rs  traex.rs  transport.rs  workspace.rs
src/preview/: common.rs  common_files.rs  docx_preview.rs  image_preview.rs  pdf_preview.rs
tests/: agent_metadata_integration.rs  agent_observability_contract.rs  agent_runtime_e2e.rs  agent_state_integration.rs  agent_transport_contract.rs  app_tui_integration.rs  claude_hooks_compatibility.rs  cli_e2e.rs  codex_hooks_compatibility.rs  git_integration.rs  lsp_process_integration.rs  opencode_plugin_compatibility.rs  repo_graph_integration.rs  traex_hooks_compatibility.rs  tree_integration.rs
tests/support/: agent.rs  lsp_test_helper.rs  mod.rs
